Added admin endpoints for activities & big effort on testing to cover all endpoints & responses
